--- a/brevity/views/mainpage.html
+++ b/brevity/views/mainpage.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    {% block head %}
     <title>Brevity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    {% endblock head %}
   </head>
   <body>
+    {% block body %}
     <h1>{{ welcome_message }}</h1>
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    {% endblock body %}
   </body>
 </html>
 
