--- a/brevity/views/viewpage.html
+++ b/brevity/views/viewpage.html
@@ -1,15 +1,23 @@
 {% import 'views/viewmacros.html' as viewmacros %}
 <html>
   <head>
+    {% block header %}
     <title>Brevity</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    {% endblock header %}
   </head>
   <body>
+    {% block body %}
     {{ viewmacros.viewsocket(object_instance, key) }}
     <script src="http://code.jquery.com/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    {% endblock body %}
   </body>
+  <footer>
+    {% block footer %}
+    {% endblock footer %}
+  </footer>
 </html>
 
