--- a/brevity/views/mainpage.html
+++ b/brevity/views/mainpage.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% block header %}
-    <title>Brevity</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-    {% endblock header %}
+    {% include 'views/header.html' -%}
   </head>
   <body>
     {% block body %}
@@ -16,8 +11,7 @@
     {% endblock body %}
   </body>
   <footer>
-    {% block footer %}
-    {% endblock footer %}
+    {% include 'views/footer.html' %}
   </footer>
 </html>
 
