Moved interfacing with Jinja2 from application.py to view.py

--- a/brevity/templates/editpage.html
+++ b/brevity/templates/editpage.html
@@ -1,7 +1,7 @@
-{% import 'views/editmacros.html' as editmacros %}
+{% import 'templates/editmacros.html' as editmacros %}
 <html>
   <head>
-    {% include 'views/header.html' -%}
+    {% include 'templates/header.html' -%}
   </head>
   <body>
     {% block body %}
@@ -13,7 +13,7 @@
     {% endblock body %}
   </body>
   <footer>
-    {% include 'views/footer.html' %}
+    {% include 'templates/footer.html' %}
   </footer>
 </html>
 
