--- a/brevity/templates/mainpage.html
+++ b/brevity/templates/mainpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% include 'views/header.html' -%}
+    {% include 'templates/header.html' -%}
   </head>
   <body>
     {% block body %}
@@ -11,7 +11,7 @@
     {% endblock body %}
   </body>
   <footer>
-    {% include 'views/footer.html' %}
+    {% include 'templates/footer.html' %}
   </footer>
 </html>
 
