--- a/brevity/templates/mainpage.html
+++ b/brevity/templates/mainpage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% include 'templates/header.html' -%}
+    {% include 'templates/header.html' %}
   </head>
   <body>
     {% block body %}
