Small refactorings to simplify how classes refer to object ids/keys/urlsafekeys.

--- a/brevity/templates/edit.html
+++ b/brevity/templates/edit.html
@@ -3,9 +3,12 @@
     {% include 'templates/header.html' -%}
   </head>
   <body>
-    {% block content %}
-    Is this working???
-    {% endblock content %}
+    <form action="/edit/{{ id }}" method="post">
+      {% block content %}
+      Is this working???
+      {% endblock content %}
+      <div><input type="submit" value="Submit"></div>
+    </form>
   </body>
   <footer>
     {% include 'templates/footer.html' %}
