Edit pages work for text attribute. Still working on other attributes.

--- a/brevity/templates/edit.html
+++ b/brevity/templates/edit.html
@@ -3,6 +3,7 @@
     {% include 'templates/header.html' -%}
   </head>
   <body>
+    <h1>{{ message }}<br></h1>
     <form action="/edit/{{ id }}" method="post">
       {% block content %}
       Is this working???
