--- a/brevity/templates/editdocument.html
+++ b/brevity/templates/editdocument.html
@@ -2,8 +2,8 @@
 {% import "templates/editmacros.html" as macros %}
 {% block content %}
   {% for nodekey in instance.nodes %}
-    {{ macros.editkey(nodekey) }}
+    {{ macros.editkey(nodekey, id) }}
   {% endfor %}
-  {{ macros.editdict(instance.variables) }}
+  {{ macros.editdict(instance.variables, id) }}
 {% endblock content %}
 
