--- a/brevity/templates/editmacros.html
+++ b/brevity/templates/editmacros.html
@@ -1,53 +1,27 @@
-{% macro edittext(text, key) -%}
+{% macro edittext(text, id) -%}
   <div>
     Text:<br>
-    <textarea name="{{ key }}_text" rows="9" cols="80">{{ text }}</textarea>
+    <textarea name="{{ id }}_text" rows="9" cols="80">{{ text }}</textarea>
   </div>
 {%- endmacro %}
 
-{% macro editdict(dict, object_key) -%}
+{% macro editdict(dict, id) -%}
   <div>
     Variables: <br>
     <p><table border="1">
     {% for key in dict.keys() %}
       <tr>
       <td>{{ key }}</td>
-      <td><textarea name="{{ key }}_variables[{{ key }}]" rows = "1" cols="80">{{ dict[key] }}</textarea></td>
+      <td><textarea name="{{ id }}_variables[{{ key }}]" rows = "1" cols="80">{{ dict[key] }}</textarea></td>
       </tr>
     {% endfor %}
     </table></p>
   </div>
 {%- endmacro %}
 
-{% macro editkey(key_object) -%}
+{% macro editkey(key_object, id) -%}
   <div>
     id:<br>
-    <textarea name="{{ key }}_keyobject" rows="1" cols="80">{{ key_object }}</textarea>
+    <textarea name="{{ id }}_keyobject" rows="1" cols="80">{{ key_object }}</textarea>
   </div>
 {%- endmacro %}
-
-{% macro editsocket(socket, key) -%}
-  {{ edittext(socket.text, key) }}
-  {{ editdict(socket.variables, key) }}
-  {{ editkey(socket.linked_node) }}
-{%- endmacro %}
-
-{% macro editnode(node) -%}
-  {% for socketkey in node.sockets %}
-   {{ editkey(socketkey) }}
-  {% endfor %}
-{%- endmacro %}
-
-{% macro editdocument(document) -%}
-  {% for nodekey in document.nodes %}
-    {{ editkey(nodekey) }}
-  {% endfor %}
-  {{ editdict(document.variables) }}
-{%- endmacro %}
-
-{% macro editamendment(amendment) -%}
-{%- endmacro %}
-
-{% macro editagreement(agreement) -%}
-{%- endmacro %}
-
