--- a/brevity/templates/editnode.html
+++ b/brevity/templates/editnode.html
@@ -2,7 +2,7 @@
 {% import "templates/editmacros.html" as macros %}
 {% block content %}
   {% for socketkey in instance.sockets %}
-   {{ macros.editkey(socketkey) }}
+   {{ macros.editkey(socketkey, id) }}
   {% endfor %}
 {% endblock content %}
 
